remark correction from 25 October 2020 (lesson 10) installed log4j update .gitignore